--- a/src/index.html
+++ b/src/index.html
@@ -13,21 +13,6 @@
     <title>TASK HERO</title>
   </head>
   <body>
-    <main>
-      <aside class="sidebar">
-        <span class="logo font-space-grotesk">
-          <img src="./assets/images/logo.svg" alt="Todo Hero logo">
-        </span>
-        <nav class="nav">
-          <button id="all-todos" class="sidebar-btn">All</button>
-          <button id="today-todos" class="sidebar-btn">Today</button>
-          <section class="projects">
-            <button class="sidebar-btn" id="projects-btn">Projects</button>
-            <div id="list-projects"></div>
-          </section>
-        </nav>
-      </aside>
-      <div class="app"></div>
-    </main>
+      <main id="app"></main>
   </body>
 </html>
